--- a/1 - Data Entry/Listing with Map/Listing.ent.qsf
+++ b/1 - Data Entry/Listing with Map/Listing.ent.qsf
@@ -1,50 +1,76 @@
-﻿[CAPI QUESTIONS]
-Version=CSPro 7.5
-
-[LANGUAGES]
-EN=English
-
-[QUESTION]
-Field=STRUCTURES_DICT.ST_LOCATION_PLACEHOLDER
-EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-EN={\colortbl ;\red0\green0\blue0;}
-EN={\*\generator Riched20 10.0.17134}\viewkind4\uc1
-EN=\pard\cf1\fs19 You will now capture the coordinates of the structure by reading the GPS.\par
-EN=\par
-EN=\i Please move to a location with a clear view of the sky to ensure a fast and accurate reading.\i0\par
-EN=}
-
-[QUESTION]
-Field=STRUCTURES_DICT.ST_NAME
-Condition=ST_TYPE<>1
-EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-EN={\colortbl ;\red0\green0\blue0;}
-EN={\*\generator Riched20 10.0.17134}\viewkind4\uc1
-EN=\pard\cf1\fs19 Enter the name of the %getvaluelabel(ST_TYPE)%\par
-EN=}
-
-[QUESTION]
-Field=STRUCTURES_DICT.ST_NAME
-Condition=ST_TYPE=1
-EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-EN={\colortbl ;\red0\green0\blue0;}
-EN={\*\generator Riched20 10.0.17134}\viewkind4\uc1
-EN=\pard\cf1\fs19 Enter the name of the head of the household\par
-EN=}
-
-[QUESTION]
-Field=STRUCTURES_DICT.ST_NUM_MEMBERS
-EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-EN={\colortbl ;\red0\green0\blue0;}
-EN={\*\generator Riched20 10.0.17134}\viewkind4\uc1
-EN=\pard\cf1\fs19 Enter the number of people that reside in this household\par
-EN=}
-
-[QUESTION]
-Field=STRUCTURES_DICT.ST_TYPE
-EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-EN={\colortbl ;\red0\green0\blue0;}
-EN={\*\generator Riched20 10.0.17134}\viewkind4\uc1
-EN=\pard\cf1\fs19 Enter the structure type\par
-EN=}
-
+﻿---
+fileType: Question Text
+version: CSPro 7.5
+languages:
+  - name: EN
+    label: English
+styles:
+  - name: Normal
+    className: normal
+    css: |
+      font-family: Arial;font-size: 16px;
+  - name: Instruction
+    className: instruction
+    css: |
+      font-family: Arial;font-size: 14px;color: #0000FF;
+  - name: Heading 1
+    className: heading1
+    css: |
+      font-family: Arial;font-size: 36px;
+  - name: Heading 2
+    className: heading2
+    css: |
+      font-family: Arial;font-size: 24px;
+  - name: Heading 3
+    className: heading3
+    css: |
+      font-family: Arial;font-size: 18px;
+questions:
+  - name: STRUCTURES_DICT.ST_LOCATION_PLACEHOLDER
+    conditions:
+      - questionText:
+          EN: |
+            <p>You will now capture the coordinates of the structure by reading the GPS.</p>
+            <p><br></p>
+            <p><i>Please move to a location with a clear view of the sky to ensure a fast and accurate reading.</i></p>
+            
+        helpText:
+          EN: |
+            
+  - name: STRUCTURES_DICT.ST_NAME
+    conditions:
+      - logic: ST_TYPE<>1
+        questionText:
+          EN: |
+            <p>Enter the name of the ~~getvaluelabel(ST_TYPE)~~</p>
+            
+        helpText:
+          EN: |
+            
+      - logic: ST_TYPE=1
+        questionText:
+          EN: |
+            <p>Enter the name of the head of the household</p>
+            
+        helpText:
+          EN: |
+            
+  - name: STRUCTURES_DICT.ST_NUM_MEMBERS
+    conditions:
+      - questionText:
+          EN: |
+            <p>Enter the number of people that reside in this household</p>
+            
+        helpText:
+          EN: |
+            
+  - name: STRUCTURES_DICT.ST_TYPE
+    conditions:
+      - questionText:
+          EN: |
+            <p>Enter the structure type</p>
+            
+        helpText:
+          EN: |
+            
+...
